# asinfo

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml  release.yml
benches/: lookup.rs
src/: lib.rs
tests/: csv_roundtrip.rs
